Change monitoring services from NodePort to LoadBalancer   Convert all monitoring service types from NodePort to LoadBalancer to simplify external access and remove hardcoded nodePort assignments. This affects Prometheus, Grafana, Jaeger UI, VictoriaMetrics, and VictoriaTraces services. Also standardize indentation in build-and-deploy.sh   script for consistency.
Signed-off-by: Kasun Ranasinghe <kasun.ranasinghe@icloud.com>

--- a/kubernetes/base/jaeger/jaeger-production.yaml
+++ b/kubernetes/base/jaeger/jaeger-production.yaml
@@ -135,11 +135,10 @@ metadata:
   labels:
     app: jaeger
 spec:
-  type: NodePort
+  type: LoadBalancer
   ports:
   - port: 16686
     targetPort: 16686
-    nodePort: 30002
     name: ui
   - port: 16687
     targetPort: 14269
