--- a/kubernetes/base/jaeger/jaeger-query.yaml
+++ b/kubernetes/base/jaeger/jaeger-query.yaml
@@ -98,11 +98,10 @@ metadata:
     app: jaeger
     component: query
 spec:
-  type: NodePort
+  type: LoadBalancer
   ports:
   - port: 16686
     targetPort: 16686
-    nodePort: 30002
     name: ui
   - port: 16687
     targetPort: 16687
