--- a/kubernetes/base/grafana/grafana-deployment.yaml
+++ b/kubernetes/base/grafana/grafana-deployment.yaml
@@ -61,11 +61,10 @@ metadata:
   labels:
     app: grafana
 spec:
-  type: NodePort
+  type: LoadBalancer
   ports:
   - port: 3000
     targetPort: 3000
-    nodePort: 30001
     name: web
   selector:
     app: grafana
