Add Istio service mesh and Kafka messaging integration
Integrate Istio service mesh for advanced traffic management, security,
and observability capabilities. Add Kafka for event-driven messaging
between services with full OpenTelemetry tracing support.

Key additions:
- Istio configuration including gateways, destination rules, security
  policies, and telemetry integration
- Kafka deployment with exporter for metrics collection
- Kafka producer in service-a and consumers in service-b/c with
  event listeners and distributed tracing
- Comprehensive automation scripts for Istio installation, Kiali
  setup, and traffic generation
- External PostgreSQL configuration example
- Enhanced Prometheus scraping for Istio metrics
- Port forwarding utilities for local development

All services updated with Istio sidecar annotations and Kafka
dependencies for seamless integration with the monitoring stack.

--- a/kubernetes/base/kustomization.yaml
+++ b/kubernetes/base/kustomization.yaml
@@ -21,3 +21,11 @@ resources:
 - services/service-c.yaml
 - postgres/postgres.yaml
 - postgres/postgres-exporter.yaml
+- kafka/kafka.yaml
+- kafka/kafka-exporter.yaml
+# Istio Service Mesh resources (apply after Istio installation)
+# Uncomment these after running ./scripts/install-istio.sh
+# - istio/istio-gateway.yaml
+# - istio/destination-rules.yaml
+# - istio/telemetry-integration.yaml
+# - istio/kiali-custom-config.yaml
