--- a/kubernetes/base/kafka/kafka.yaml
+++ b/kubernetes/base/kafka/kafka.yaml
@@ -36,6 +36,8 @@ spec:
     metadata:
       labels:
         app: zookeeper
+      annotations:
+        sidecar.istio.io/inject: "false"
     spec:
       containers:
       - name: zookeeper
@@ -109,6 +111,8 @@ spec:
     metadata:
       labels:
         app: kafka
+      annotations:
+        sidecar.istio.io/inject: "false"
     spec:
       containers:
       - name: kafka
