--- a/kubernetes/base/postgres/postgres-exporter.yaml
+++ b/kubernetes/base/postgres/postgres-exporter.yaml
@@ -57,6 +57,48 @@ data:
         - max_tx_duration:
             usage: "GAUGE"
             description: "Max duration in seconds any active transaction has been running"
+
+    pg_stat_statements_calls:
+      query: |
+        SELECT
+          d.datname,
+          s.queryid,
+          s.calls
+        FROM pg_stat_statements AS s
+        JOIN pg_database AS d ON d.oid = s.dbid
+      master: true
+      metrics:
+        - datname:
+            usage: "LABEL"
+            description: "Name of the database"
+        - queryid:
+            usage: "LABEL"
+            description: "Hash identifier of the normalized query"
+        - calls:
+            usage: "COUNTER"
+            metric_name: "pg_stat_statements_calls"
+            description: "Number of times the statement has been executed"
+
+    pg_stat_statements_total_time_seconds:
+      query: |
+        SELECT
+          d.datname,
+          s.queryid,
+          COALESCE(s.total_time, 0)::float8 / 1000 AS total_time_seconds
+        FROM pg_stat_statements AS s
+        JOIN pg_database AS d ON d.oid = s.dbid
+      master: true
+      metrics:
+        - datname:
+            usage: "LABEL"
+            description: "Name of the database"
+        - queryid:
+            usage: "LABEL"
+            description: "Hash identifier of the normalized query"
+        - total_time_seconds:
+            usage: "COUNTER"
+            metric_name: "pg_stat_statements_total_time_seconds"
+            description: "Cumulative time spent executing the statement in seconds"
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -80,75 +122,75 @@ spec:
         prometheus.io/path: "/metrics"
     spec:
       containers:
-      - name: postgres-exporter
-        image: prometheuscommunity/postgres-exporter:v0.15.0
-        imagePullPolicy: IfNotPresent
-        ports:
-        - containerPort: 9187
-          name: metrics
-        env:
-        # Build DATA_SOURCE_NAME from individual components for flexibility
-        # Format: postgresql://username:password@hostname:port/database?sslmode=disable
-        - name: POSTGRES_USER
-          valueFrom:
-            configMapKeyRef:
-              name: postgres-config
-              key: POSTGRES_USER
-        - name: POSTGRES_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: postgres-secret
-              key: POSTGRES_PASSWORD
-        - name: POSTGRES_DB
-          valueFrom:
-            configMapKeyRef:
-              name: postgres-config
-              key: POSTGRES_DB
-        # For managed PostgreSQL, you can override these via ConfigMap
-        - name: POSTGRES_HOST
-          value: "postgres.services.svc.cluster.local"
-        - name: POSTGRES_PORT
-          value: "5432"
-        # Construct the DATA_SOURCE_NAME
-        - name: DATA_SOURCE_NAME
-          value: "postgresql://$(POSTGRES_USER):$(POSTGRES_PASSWORD)@$(POSTGRES_HOST):$(POSTGRES_PORT)/$(POSTGRES_DB)?sslmode=disable"
-        # Custom queries file
-        - name: PG_EXPORTER_EXTEND_QUERY_PATH
-          value: "/etc/postgres-exporter/queries.yaml"
-        # Disable default metrics that might not work with managed databases
-        - name: PG_EXPORTER_DISABLE_DEFAULT_METRICS
-          value: "false"
-        - name: PG_EXPORTER_DISABLE_SETTINGS_METRICS
-          value: "false"
-        volumeMounts:
-        - name: queries
-          mountPath: /etc/postgres-exporter
-          readOnly: true
-        resources:
-          requests:
-            cpu: 50m
-            memory: 64Mi
-          limits:
-            cpu: 200m
-            memory: 128Mi
-        livenessProbe:
-          httpGet:
-            path: /
-            port: 9187
-          initialDelaySeconds: 30
-          periodSeconds: 10
-          failureThreshold: 3
-        readinessProbe:
-          httpGet:
-            path: /
-            port: 9187
-          initialDelaySeconds: 5
-          periodSeconds: 5
-          failureThreshold: 3
+        - name: postgres-exporter
+          image: prometheuscommunity/postgres-exporter:v0.15.0
+          imagePullPolicy: IfNotPresent
+          ports:
+            - containerPort: 9187
+              name: metrics
+          env:
+            # Build DATA_SOURCE_NAME from individual components for flexibility
+            # Format: postgresql://username:password@hostname:port/database?sslmode=disable
+            - name: POSTGRES_USER
+              valueFrom:
+                configMapKeyRef:
+                  name: postgres-config
+                  key: POSTGRES_USER
+            - name: POSTGRES_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: postgres-secret
+                  key: POSTGRES_PASSWORD
+            - name: POSTGRES_DB
+              valueFrom:
+                configMapKeyRef:
+                  name: postgres-config
+                  key: POSTGRES_DB
+            # For managed PostgreSQL, you can override these via ConfigMap
+            - name: POSTGRES_HOST
+              value: "postgres.services.svc.cluster.local"
+            - name: POSTGRES_PORT
+              value: "5432"
+            # Construct the DATA_SOURCE_NAME
+            - name: DATA_SOURCE_NAME
+              value: "postgresql://$(POSTGRES_USER):$(POSTGRES_PASSWORD)@$(POSTGRES_HOST):$(POSTGRES_PORT)/$(POSTGRES_DB)?sslmode=disable"
+            # Custom queries file
+            - name: PG_EXPORTER_EXTEND_QUERY_PATH
+              value: "/etc/postgres-exporter/queries.yaml"
+            # Disable default metrics that might not work with managed databases
+            - name: PG_EXPORTER_DISABLE_DEFAULT_METRICS
+              value: "false"
+            - name: PG_EXPORTER_DISABLE_SETTINGS_METRICS
+              value: "false"
+          volumeMounts:
+            - name: queries
+              mountPath: /etc/postgres-exporter
+              readOnly: true
+          resources:
+            requests:
+              cpu: 50m
+              memory: 64Mi
+            limits:
+              cpu: 200m
+              memory: 128Mi
+          livenessProbe:
+            httpGet:
+              path: /
+              port: 9187
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            failureThreshold: 3
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 9187
+            initialDelaySeconds: 5
+            periodSeconds: 5
+            failureThreshold: 3
       volumes:
-      - name: queries
-        configMap:
-          name: postgres-exporter-queries
+        - name: queries
+          configMap:
+            name: postgres-exporter-queries
 ---
 apiVersion: v1
 kind: Service
@@ -166,6 +208,6 @@ spec:
   selector:
     app: postgres-exporter
   ports:
-  - name: metrics
-    port: 9187
-    targetPort: 9187
+    - name: metrics
+      port: 9187
+      targetPort: 9187
